# dusk-wallet-core

./: Cargo.toml
ffi/: Cargo.toml
