[package]
name = "ffi"                                                           # the name of the package
version = "0.1.0"                                                      # the current version, obeying semver
authors = ["Daksh <daksh@dusk.network>", "Moana <moana@dusk.network>"]
edition = "2021"
description = "The ffi for the wasm interface of the wallet core"
license = "MPL-2.0"
